--- a/dataProcess/src/main/resources/templates/main.html
+++ b/dataProcess/src/main/resources/templates/main.html
@@ -55,7 +55,7 @@
             <div title="模块导航" data-options="iconCls:'icon-diy8',selected:true" >
                 <ul id="menuTree"></ul>
             </div>
-            <div title="报表中心" data-options="iconCls:'icon-diy9'" >
+            <div title="数据清洗" data-options="iconCls:'icon-diy9'" >
                 <h3 style="color:#BECBD7;">正在努力开发中...</h3>
             </div>
             <div title="数据分析" data-options="iconCls:'icon-diy3'" >
@@ -71,7 +71,7 @@
     <div data-options="region:'center'" style="background:#eee;border-left: none;border-bottom: none;border-top: none;">
         <div id="centerTabs" class="easyui-tabs" style="width:500px;height:250px;"
              data-options="fit:true">
-            <div title="欢迎页" >
+            <div title="欢迎页" data-options="closable:true">
                 <div align="center" style="margin-top: 100px;">
                     <font size="16" color="#95B8E7">欢迎登陆<br/>入库系统</font>
                 </div>
