--- a/dataProcess/src/main/resources/templates/patient.html
+++ b/dataProcess/src/main/resources/templates/patient.html
@@ -7,21 +7,21 @@
     <script type="text/javascript" src="../static/js/patient.js" th:src="@{/js/patient.js}"></script>
 </head>
 <body>
-    <div style="width:80%;height:auto;margin-left: auto;margin-right: auto;">
+    <div style="width:80%;height:500px;margin-left: auto;margin-right: auto;">
         <!--Patient基本信息-->
-        <div class="easyui-panel" title="Patient基本信息" style="width:40%;max-width:450px;height:auto;padding:30px 60px;"
-             data-options="fit:true,style:{float:'left'}">
+        <div class="easyui-panel" title="Patient基本信息" style="width:60%;height:80%;max-height:90%;padding:15px 60px;"
+             data-options="fit:true">
             <form id="patientForm" class="easyui-form" th:method="post" data-options="novalidate:true"
                   th:action="@{/stock/processPatient}" th:object="${basicInfo}" >
                 <div style="margin-bottom:20px">
-                    <input id="hospitalId" th:name="hospitalId" style="width:100%;" data-options="label:'医院:',prompt:'选择医院...'"/>
+                    <input id="hospitalId" th:name="hospitalId" style="width:50%;" data-options="label:'医院:',prompt:'选择医院...'"/>
                 </div>
                 <div style="margin-bottom:20px">
-                    <input id="prefix" class="easyui-textbox" th:name="prefix"  style="width:40%" data-options="label:'批次号:',readonly:true"/>
-                    <input id="batchNoDateBox" class="easyui-datebox" th:name="batchNo" style="width:50%;" data-options="required:true"/>
+                    <input id="prefix" class="easyui-textbox" th:name="prefix"  style="width:20%" data-options="label:'批次号:',readonly:true"/>
+                    <input id="batchNoDateBox" class="easyui-datebox" th:name="batchNo" style="width:30%;" data-options="required:true"/>
                 </div>
                 <div style="margin-bottom:20px">
-                    <input class="easyui-textbox" th:name="userId" style="width:100%" data-options="label:'医生:',prompt:'所属医生...',required:false"/>
+                    <input class="easyui-textbox" th:name="userId" style="width:50%" data-options="label:'医生:',prompt:'所属医生...',required:false"/>
                 </div>
                 <div style="margin-bottom:20px">
                     <input class="easyui-numberspinner" th:name="version" style="width:50%;" th:value="1" data-options="
@@ -34,114 +34,38 @@
                     <span id="versionNo" style="margin:10px 0;width:50%;">1</span>
                 </div>
             </form>
-        </div>
-        <!--Patient字段映射信息-->
-        <div class="easyui-panel" title="Patient字段映射" style="width:40%;max-width:450px;height:auto;padding:10px 15px;"
-             data-options="fit:true,style:{float:'left'}">
-            <table id="dg" class="easyui-datagrid" title="Row Editing in DataGrid" style="width:90%;height:auto;margin-left: auto;margin-right: auto;"
+            <!--Patient字段映射信息-->
+            <table id="dg" class="easyui-datagrid" title="Patient字段映射信息" style="width:90%;height:150px;"
                    data-options="
                 iconCls: 'icon-edit',
                 singleSelect: true,
-                toolbar: '#tb',
-                url: 'datagrid_data1.json',
-                method: 'get',
-                onClickCell: onClickCell,
-                onEndEdit: onEndEdit
+                toolbar: '#tb'
             ">
                 <thead>
                 <tr>
                     <th data-options="field:'itemid',width:80">原表字段</th>
-                    <th data-options="field:'productid',width:100,
-                        formatter:function(value,row){
-                            return row.productname;
-                        },
-                        editor:{
-                            type:'combobox',
-                            options:{
-                                valueField:'productid',
-                                textField:'productname',
-                                method:'get',
-                                url:'products.json',
-                                required:true
-                            }
-                        }">对应字段</th>
+                    <th data-options="field:'productid',width:100">对应字段</th>
                     <th data-options="field:'unitcost',width:80,editor:'numberbox'">前缀</th>
                     <th data-options="field:'attr1',width:250,editor:'textbox'">格式化</th>
                 </tr>
                 </thead>
+                <tbody>
+                    <tr>
+                        <td>test1</td><td>name1</td><td>2323</td><td>2323</td>
+                    </tr>
+                    <tr>
+                        <td>test2</td><td>name2</td><td>4612</td><td>2323</td>
+                    </tr>
+                </tbody>
             </table>
+            <!--按钮-->
+            <div style="text-align:center;margin-top: 20px;float: bottom;">
+                <a id="submitBtn" href="javascript:void(0)" class="easyui-linkbutton" style="width:80px">开始导入</a>
+                <a id="clearBtn" href="javascript:void(0)" class="easyui-linkbutton" style="width:80px">重置</a>
+            </div>
+            <!--进度条-->
+            <div id="progressBar" class="easyui-progressbar" data-options="value:0,text:'处理中...{value}%'" style="width:90%;margin-top: 8px;"></div>
         </div>
-        <!--按钮-->
-        <div style="text-align:center;padding:5px 0;clear: both;">
-            <a id="submitBtn" href="javascript:void(0)" class="easyui-linkbutton" style="width:80px">开始导入</a>
-            <a id="clearBtn" href="javascript:void(0)" class="easyui-linkbutton" style="width:80px">重置</a>
-        </div>
-        <!--进度条-->
-        <div id="progressBar" class="easyui-progressbar" data-options="value:0,text:'处理中...{value}%'" style="width:100%;margin-top: 5px;"></div>
     </div>
-    <script type="text/javascript">
-        var editIndex = undefined;
-        function endEditing(){
-            if (editIndex == undefined){return true}
-            if ($('#dg').datagrid('validateRow', editIndex)){
-                $('#dg').datagrid('endEdit', editIndex);
-                editIndex = undefined;
-                return true;
-            } else {
-                return false;
-            }
-        }
-        function onClickCell(index, field){
-            if (editIndex != index){
-                if (endEditing()){
-                    $('#dg').datagrid('selectRow', index)
-                        .datagrid('beginEdit', index);
-                    var ed = $('#dg').datagrid('getEditor', {index:index,field:field});
-                    if (ed){
-                        ($(ed.target).data('textbox') ? $(ed.target).textbox('textbox') : $(ed.target)).focus();
-                    }
-                    editIndex = index;
-                } else {
-                    setTimeout(function(){
-                        $('#dg').datagrid('selectRow', editIndex);
-                    },0);
-                }
-            }
-        }
-        function onEndEdit(index, row){
-            var ed = $(this).datagrid('getEditor', {
-                index: index,
-                field: 'productid'
-            });
-            row.productname = $(ed.target).combobox('getText');
-        }
-        function append(){
-            if (endEditing()){
-                $('#dg').datagrid('appendRow',{status:'P'});
-                editIndex = $('#dg').datagrid('getRows').length-1;
-                $('#dg').datagrid('selectRow', editIndex)
-                    .datagrid('beginEdit', editIndex);
-            }
-        }
-        function removeit(){
-            if (editIndex == undefined){return}
-            $('#dg').datagrid('cancelEdit', editIndex)
-                .datagrid('deleteRow', editIndex);
-            editIndex = undefined;
-        }
-        function accept(){
-            if (endEditing()){
-                $('#dg').datagrid('acceptChanges');
-            }
-        }
-        function reject(){
-            $('#dg').datagrid('rejectChanges');
-            editIndex = undefined;
-        }
-        function getChanges(){
-            var rows = $('#dg').datagrid('getChanges');
-            alert(rows.length+' rows are changed!');
-        }
-    </script>
 </body>
 </html>
